--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -8,6 +8,9 @@
 
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.3/howler.core.min.js" defer></script>
     <script src="/javascripts/app.js" defer></script>
   </head>
   <body>
