--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -8,6 +8,7 @@
 
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <script src="http://code.responsivevoice.org/responsivevoice.js" defer></script>
     <script src="/javascripts/app.js" defer></script>
   </head>
   <body>
