--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -4,17 +4,12 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Blind Racer</title>
+    <title>TypeZone</title>
 
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" defer></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.3/howler.core.min.js" defer></script>
     <script src="http://code.responsivevoice.org/responsivevoice.js" defer></script>
-    <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" defer></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.3/howler.core.min.js" defer></script>-->
 
     <script src="/javascripts/app.js" defer></script>
   </head>
